--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Selamat Sempro....!!! :)</title>
+  <title>Selamat Ulang Tahun Sayang....!!! :)</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -15,7 +15,7 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/music.mp3">
+    <source src="./music/365 Hari.mp3">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
@@ -26,17 +26,17 @@
         Hi
         <span>Nurli Alifah</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">Hari ini ulang tahun ya</p>
     </div>
 
     <div class="three">
-      <p>It's your start from the real research for skripsi!! :D</p>
+      <p>Cie tambah tua!! :D</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Halo sayangggg, Kamu...!!!, Iya Kamu...!!!, Hari ini sempro kamu ya, Cie udah semester tua, Selamat revisian proposal Sayang...!!!, Maaf gak bisa kasih hadiah, sehat selalu yahh, pokonya harus lebih baik lagi, gk boleh males2an, Gk boleh cepet nyerah, harus lebih rajin belajarnyaa, jangan begadang terus nanti sakit, jangan nangis ya, kamu jelek kalo nangis, untuk doanya kamu yang ucapin nanti aku aminin dari sini, yaudhlah pokonya wish you all the best, babay... love you....
+          Selamat Ulang Tahun Sayang...!!!, Maaf gak bisa kasih hadiah, sehat selalu yahh, pokonya harus lebih baik lagi, gk boleh males2an, Gk boleh cepet nyerah, harus lebih rajin belajarnyaa, jangan begadang terus nanti sakit, jangan nangis ya, kamu jelek kalo nangis, untuk doanya kamu yang ucapin nanti aku aminin dari sini, yaudhlah pokonya wish you all the best, babay... love you....
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -62,10 +62,10 @@
     </div>
 
     <div class="six">
-      <img src="./img/poto.jpeg" alt="profile" class="profile-picture" id="imagePath"/>
+      <img src="./img/1684919245255.jpg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">Happy Sempro Day!</h3>
+        <h3 class="wish-hbd">Selamat Ulang Tahun Sayang...!!!</h3>
         <h5 id="wishText">May the best always be with you! ;)</h5>
       </div>
     </div>
