--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Selamat Ulang Tahun Sayang....!!! :)</title>
+  <title>Selamat Ulang Sidang....!!! :)</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -24,29 +24,29 @@
     <div class="one">
       <h1 class="one">
         Hi
-        <span>Nurli Alifah</span>
+        <span>Hi</span>
       </h1>
-      <p class="two" id="greetingText">Hari ini ulang tahun ya</p>
+      <p class="two" id="greetingText">Hari ini kamu sidang ya</p>
     </div>
 
     <div class="three">
-      <p>Cie tambah tua!! :D</p>
+      <p>Cie udah semester tua akhirnya sidang!! :D</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Selamat Ulang Tahun Sayang...!!!, Maaf gak bisa kasih hadiah, sehat selalu yahh, pokonya harus lebih baik lagi, gk boleh males2an, Gk boleh cepet nyerah, harus lebih rajin belajarnyaa, jangan begadang terus nanti sakit, jangan nangis ya, kamu jelek kalo nangis, untuk doanya kamu yang ucapin nanti aku aminin dari sini, yaudhlah pokonya wish you all the best, babay... love you....
+          Selamat Sidang Sayang...!!!, Maaf gak bisa kasih hadiah, sehat selalu yahh, pokonya harus lebih baik lagi, gk boleh males2an, Gk boleh cepet nyerah, harus lebih rajin pokoknya, jangan begadang terus nanti sakit, jangan nangis ya, kamu jelek kalo nangis, untuk doanya kamu yang ucapin nanti aku aminin dari sini, yaudhlah pokonya wish you all the best, babay... love you....
         </p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
 
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
+      <p class="idea-1">semangat</p>
+      <p class="idea-2">jangan pernah menyerah.</p>
       <p class="idea-3">
-        I realised, I wanted to do something<br>
+        jangan terlalu sibuk nyari sesuatu yang<br>
         <strong>special</strong>
         .
       </p>
@@ -62,10 +62,10 @@
     </div>
 
     <div class="six">
-      <img src="./img/1684919245255.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+      <img src="https://i.pinimg.com/originals/36/6c/dc/366cdce48265cb21afa004fe08816f71.gif" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">Selamat Ulang Tahun Sayang...!!!</h3>
+        <h3 class="wish-hbd">Selamat Sidang...!!!</h3>
         <h5 id="wishText">May the best always be with you! ;)</h5>
       </div>
     </div>
