--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Selamat Sidang Sayang...!!!, Maaf gak bisa kasih hadiah, sehat selalu yahh, pokonya harus lebih baik lagi, gk boleh males2an, Gk boleh cepet nyerah, harus lebih rajin pokoknya, jangan begadang terus nanti sakit, jangan nangis ya, kamu jelek kalo nangis, untuk doanya kamu yang ucapin nanti aku aminin dari sini, yaudhlah pokonya wish you all the best, babay... love you....
+          Selamat Sidang Kamu...!!!, Maaf gak bisa kasih hadiah, sehat selalu yahh, pokonya harus lebih baik lagi, gk boleh males2an, Gk boleh cepet nyerah, harus lebih rajin pokoknya, jangan begadang terus nanti sakit, jangan nangis ya, kamu jelek kalo nangis, untuk doanya kamu yang ucapin nanti aku aminin dari sini, yaudhlah pokonya wish you all the best, babay... love you....
         </p>
         <p class="fake-btn">Send</p>
       </div>
