--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Selamat Sidang....!!! :)</title>
+  <title>Selamat Sarjana....!!! :)</title>
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -15,7 +15,7 @@
 <body>
 
   <audio class="song" loop autoplay>
-    <source src="./music/365 Hari.mp3">
+    <source src="./music/music.mp3">
     </source>
     Your browser isn't invited for super fun audio time.
   </audio>
@@ -26,17 +26,17 @@
         Hi
         <span>Hi</span>
       </h1>
-      <p class="two" id="greetingText">Hari ini kamu sidang ya</p>
+      <p class="two" id="greetingText">Hari ini kamu udah lulus ya</p>
     </div>
 
     <div class="three">
-      <p>Cie udah semester tua akhirnya sidang!! :D</p>
+      <p>Cie udah semester tua akhirnya lulus!! :D</p>
     </div>
 
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Selamat Sidang Kamu...!!!, Maaf gak bisa kasih hadiah, sehat selalu yahh, pokonya harus lebih baik lagi, gk boleh males2an, Gk boleh cepet nyerah, harus lebih rajin pokoknya, jangan begadang terus nanti sakit, jangan nangis ya, kamu jelek kalo nangis, untuk doanya kamu yang ucapin nanti aku aminin dari sini, yaudhlah pokonya wish you all the best, babay... mangat....
+          Selamat atas gelarnya Kamu...!!!, Maaf gak bisa kasih hadiah, sehat selalu yahh, pokonya harus lebih baik lagi, gk boleh males2an, Gk boleh cepet nyerah, harus lebih rajin pokoknya, jangan begadang terus nanti sakit, jangan nangis ya, kamu jelek kalo nangis, untuk doanya kamu yang ucapin nanti aku aminin dari sini, yaudhlah pokonya wish you all the best, babay... mangat....
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -65,7 +65,7 @@
       <img src="https://i.pinimg.com/originals/36/6c/dc/366cdce48265cb21afa004fe08816f71.gif" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
-        <h3 class="wish-hbd">Selamat Sidang...!!!</h3>
+        <h3 class="wish-hbd">Selamat atas gelarnya...!!!</h3>
         <h5 id="wishText">May the best always be with you! ;)</h5>
       </div>
     </div>
